# gri

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .yamllint  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.config/: requirements.in
.github/workflows/: release.yml  tox.yml
gri/: __main__.py  console.py  gerrit.py  review.py
lib/gri/: __main__.py  abc.py  console.py  constants.py  gerrit.py  github.py  label.py  review.py
src/gri/: __main__.py  abc.py  console.py  gerrit.py  github.py  label.py
test/: .gertty.yaml  gri.yaml
