[build-system]
requires = [
  "setuptools >= 65.3.0", # required by pyproject+setuptools_scm integration and editable installs
  "setuptools_scm[toml] >= 7.0.5", # required for "no-local-version" scheme

]
build-backend = "setuptools.build_meta"

[project]
# https://peps.python.org/pep-0621/#readme
requires-python = ">=3.9"
dynamic = ["version", "dependencies", "optional-dependencies"]
name = "gri"
description = "Git Review Interface for Gerrit and Github"
readme = "README.md"
authors = [{ "name" = "Sorin Sbarnea", "email" = "sorin.sbarnea@gmail.com" }]
maintainers = [{ "name" = "Sorin Sbarnea", "email" = "sorin.sbarnea@gmail.com" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python",
  "Topic :: System :: Systems Administration",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
keywords = ["gerrit", "git", "github", "review"]

[project.urls]
homepage = "https://github.com/pycontribs/gri"
repository = "https://github.com/pycontribs/gri"
changelog = "https://github.com/pycontribs/gri/releases"

[project.scripts]
gri = "gri.__main__:cli"
grib = "gri.__main__:cli_bugs"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
[[tool.mypy.overrides]]
module = [
  "click_help_colors",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring"
]
[tool.ruff]
ignore = [
  "ANN",
  "ARG",
  "D",
  "DTZ",
  "E501", # black managed
  "PLR",
  "PTH",
  "S605",
  "TRY",
]
select = ["ALL"]
target-version = "py39"
# Same as Black.
line-length = 88
[tool.setuptools.dynamic]
optional-dependencies.test = { file = [".config/requirements-test.txt"] }
optional-dependencies.lock = { file = [".config/requirements-lock.txt"] }
dependencies = { file = [".config/requirements.in"] }

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/gri/_version.py"
