# -*- coding: utf-8 -*-
[metadata]
name = gri
description = gri is a Gerrit Reviews Interface
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gerrit
maintainer = Sorin Sbarnea
author = Sorin Sbarnea
author-email = sorin.sbarnea@gmail.com
maintainer-email = sorin.sbarnea@gmail.com
url = https://github.com/pycontribs/gri
project_urls =
    Source=https://github.com/pycontribs/gri
    Tracker=https://github.com/tox-dev/pycontribs/gri
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
use_scm_version = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    blessings
    click
    pygments
    pyyaml
    requests

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    gri=gri.__main__:main

[bdist_wheel]
universal = 1

[flake8]
max-complexity = 22
max-line-length = 99
ignore =
    B011
    C901,
    D
    E203,
    E402,
    W503,

[pep8]
max-line-length = 99
