# -*- coding: utf-8 -*-
[metadata]
name = gri
description = Gerrit Review Interface
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gerrit
maintainer = Sorin Sbarnea
author = Sorin Sbarnea
author-email = sorin.sbarnea@gmail.com
maintainer-email = sorin.sbarnea@gmail.com
url = https://github.com/pycontribs/gri
project_urls =
    Source=https://github.com/pycontribs/gri
    Tracker=https://github.com/pycontribs/pycontribs/gri
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    click>=7.1.2
    click-help-colors>=0.6
    click-option-group
    pyyaml>=5.3.1
    requests
    rich>=6.2.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    gri=gri.__main__:main

[bdist_wheel]
universal = 1

[flake8]
max-complexity = 22
max-line-length = 88
ignore =
    B011
    C901,
    D
    E203,
    E402,
    W503,

[pep8]
max-line-length = 99
