# -*- coding: utf-8 -*-
[metadata]
name = gri
description = Git Review Interface for Gerrit and Github
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Sorin Sbarnea
author = Sorin Sbarnea
author-email = sorin.sbarnea@gmail.com
maintainer-email = sorin.sbarnea@gmail.com
url = https://github.com/pycontribs/gri
project_urls =
  Source=https://github.com/pycontribs/gri
  Tracker=https://github.com/pycontribs/gri
  CI = https://github.com/pycontribs/gri/actions
platforms = any
license = MIT
license_file = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: OS Independent
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Testing
  Topic :: Software Development :: Libraries
  Topic :: Utilities
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Bug Tracking
  Topic :: Software Development :: Quality Assurance
  Topic :: Software Development :: Testing
  Topic :: Utilities
keywords =
  gerrit
  git
  github
  review

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = lib
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm>=1.15.0
  setuptools_scm_git_archive>=1.0

# These are required in actual runtime:
install_requires =
  click>=7.1.2
  click-help-colors>=0.6
  dataclasses; python_version<"3.7"
  pygithub
  pyyaml>=5.3.1
  requests
  rich>=6.2.0

[options.entry_points]
console_scripts =
  gri=gri.__main__:cli

[options.packages.find]
where = lib

[flake8]
max-complexity = 22
max-line-length = 88
ignore =
  B011
  C901,
  D
  E203,
  E402,
  W503,

[pep8]
max-line-length = 99
